--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "next": "15.4.6",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
